--- a/client/src/pages/HomePage.css
+++ b/client/src/pages/HomePage.css
@@ -8,17 +8,15 @@
 
 .animated-title {
   margin: 0;
-  color: rgba(225, 225, 225, 0.1);
-  background-image: url("https://images.unsplash.com/photo-1640340434855-6084b1f4901c?auto=format&fit=crop&q=80");
+  color: rgba(225,225,225, .01);
+  background-image: url("https://plus.unsplash.com/premium_photo-1674834298045-e405bc99076b?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"); /* Changed to a finance-related image */
   background-repeat: repeat;
   -webkit-background-clip: text;
   background-clip: text;
   animation: animate 15s ease-in-out infinite;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-weight: 900;
   font-family: 'Raleway', sans-serif;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-  opacity: 0.8;
 }
 
 @keyframes animate {
